test/conformance/chainsaw/mutating-policies/existing/expression/delete-get/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-cm-1
  namespace: myns-delete-get
data:
  key1: value1
