test/conformance/chainsaw/mutating-policies/existing/expression/delete-get/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: MutatingPolicy
metadata:
  name: test-mpol-expression-delete-get
spec:
  failurePolicy: Fail
  evaluation:
    mutateExisting:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["DELETE"]
      resources: ["secrets"]
      resourceNames: ["trigger-secret"]
  targetMatchConstraints:
    expression: resource.get("v1", "configmaps", object.metadata.namespace, "test-cm-1")
  mutations:
  - patchType: ApplyConfiguration
    applyConfiguration:
      expression: >
        Object{
          metadata: Object.metadata{
            labels: Object.metadata.labels{
              deleted: "true"
            }
          }
        }
