test/conformance/chainsaw/mutating-policies/existing/expression/delete-get/secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: trigger-secret
  namespace: myns-delete-get
