test/conformance/chainsaw/mutating-policies/existing/expression/delete-get/test-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myns-delete-get
