test/conformance/chainsaw/mutating-policies/existing/expression/delete-get/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: delete-trigger-target-with-expression-get
spec:
  concurrent: false
  steps:
  - name: create namespace and resources
    try:
    - create:
        file: test-namespace.yaml
    - assert:
        file: test-namespace.yaml
    - create:
        file: configmap.yaml
    - assert:
        file: configmap.yaml
    - create:
        file: secret.yaml
    - assert:
        file: secret.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait for policy and webhooks to settle
    try:
    - sleep:
        duration: 5s
  - name: trigger delete operation
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: Secret
          namespace: myns-delete-get
          name: trigger-secret
  - name: wait for background UR processing
    try:
    - sleep:
        duration: 8s
  - name: verify target configmap is mutated
    try:
    - assert:
        file: configmap-assert.yaml
